lib/jazz.sample/src/jazz/sample/error/unit/extraneous.jazz
;;;==============
;;;  JazzScheme
;;;==============
;;;
;;;; Extraneous
;;;


(library jazz.sample.error.unit.extraneous)


(foo)
